--- a/package.json
+++ b/package.json
@@ -1,61 +1,56 @@
 {
-  "name": "tcomb-form-templates-bulma",
-  "version": "0.2.4",
-  "description": "Bulma templates for tcomb-form",
-  "main": "lib/index.js",
-  "files": [
-    "lib",
-    "src"
-  ],
-  "scripts": {
-    "lint": "eslint src test",
-    "test": "npm run lint",
-    "test:node": "babel-node test",
-    "build": "rm -rf lib && mkdir lib && babel --out-dir lib src"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/dom-devel/tcomb-form-templates-bulma.git"
-  },
-  "author": "Giulio Canti <giulio.canti@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/dom-devel/tcomb-form-templates-bulma/issues"
-  },
-  "homepage": "https://github.com/dom-devel/tcomb-form-templates-bulma",
-  "dependencies": {
-    "classnames": "^2.1.3",
-    "tcomb": "^3.0.0"
-  },
-  "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0 || ^16.0.0"
-  },
-  "devDependencies": {
-    "babel": "5.8.38",
-    "babel-eslint": "4.1.8",
-    "babel-loader": "5.3.2",
-    "eslint": "1.10.3",
-    "eslint-config-airbnb": "1.0.0",
-    "eslint-plugin-react": "3.10.0",
-    "isparta-loader": "1.0.0",
-    "karma": "0.13.9",
-    "karma-chrome-launcher": "0.2.0",
-    "karma-coverage": "0.5.3",
-    "karma-firefox-launcher": "0.1.7",
-    "karma-tap": "1.0.3",
-    "karma-webpack": "1.7.0",
-    "react-vdom": "^0.6.2",
-    "tape": "4.4.0",
-    "webpack": "1.12.8"
-  },
-  "tags": [
-    "tcomb-form",
-    "templates",
-    "bulma"
-  ],
-  "keywords": [
-    "tcomb-form",
-    "templates",
-    "bulma"
-  ]
+    "name": "tcomb-form-templates-bulma",
+    "version": "0.2.4",
+    "description": "Bulma templates for tcomb-form",
+    "main": "lib/index.js",
+    "files": [
+        "lib",
+        "src"
+    ],
+    "scripts": {
+        "lint": "eslint src test",
+        "test": "npm run lint",
+        "test:node": "babel-node test",
+        "build": "rm -rf lib && mkdir lib && babel --out-dir lib src"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/dom-devel/tcomb-form-templates-bulma.git"
+    },
+    "author": "Giulio Canti <giulio.canti@gmail.com>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/dom-devel/tcomb-form-templates-bulma/issues"
+    },
+    "homepage": "https://github.com/dom-devel/tcomb-form-templates-bulma",
+    "dependencies": {
+        "@babel/core": "^7.8.4",
+        "@babel/preset-env": "^7.8.4",
+        "@babel/preset-react": "^7.8.3",
+        "classnames": "^2.1.3",
+        "tcomb": "^3.0.0"
+    },
+    "peerDependencies": {
+        "react": "^0.14.0 || ^15.0.0 || ^16.0.0"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.8.4",
+        "babel-eslint": "4.1.8",
+        "eslint": "1.10.3",
+        "eslint-config-airbnb": "1.0.0",
+        "eslint-plugin-react": "3.10.0",
+        "react-vdom": "^0.6.2",
+        "tape": "4.4.0",
+        "webpack": "1.12.8"
+    },
+    "tags": [
+        "tcomb-form",
+        "templates",
+        "bulma"
+    ],
+    "keywords": [
+        "tcomb-form",
+        "templates",
+        "bulma"
+    ]
 }
